# tcc-codigo

./: .gitignore  README.MD
influxdb-benchmark/: benchmark.py  docker-compose.yml
mqtt-example/: Cargo.toml
mqtt-example/src/pub/: main.rs
mqtt-example/src/sub/: main.rs
spi-influxdb/: platformio.ini
spi-influxdb/lib/config/: config.h
spi-influxdb/lib/formatData/: formatData.h
spi-influxdb/lib/rutils/: rutils.h
spi-influxdb/src/: main.cpp  workspace.code-workspace
spi-mqtt-v2/: platformio.ini
spi-mqtt-v2/lib/config/: config.h
spi-mqtt-v2/lib/formatData/: formatData.h
spi-mqtt-v2/lib/log/: log.h
spi-mqtt-v2/lib/spiSafeMaster/: spiSafeMaster.h
spi-mqtt-v2/src/: main.cpp
spi-mqtt/lib/config/: config.h
spi-mqtt/lib/formatData/: formatData.h
spi-mqtt/src/: main.cpp
spi-mqtt/test/: test_format.cpp
spislave8266pio/src/: main.cpp
