[package]
name = "mqtt-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.11"
#influxdb = { version = "0.5.2", default-features = false, features = ["derive", "use-serde", "h1-client"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
#async-std = "1"
chrono = "0.4"

[[bin]]
name = "sub"
path = "src/sub/main.rs"

[[bin]]
name = "pub"
path = "src/pub/main.rs"
